--- a/FilmCatalog/FilmCatalog/Resources/PageStyles.xaml
+++ b/FilmCatalog/FilmCatalog/Resources/PageStyles.xaml
@@ -138,6 +138,7 @@
         <Setter Property="Width" Value="25" />
         <Setter Property="Height" Value="25" />
         <Setter Property="Margin" Value="10" />
+        <Setter Property="Foreground" Value="White" />
     </Style>
 
     <Style x:Key="DefaultIcon" TargetType="materialDesign:PackIcon">
@@ -153,6 +154,7 @@
         <Setter Property="Margin" Value="20,10" />
         <Setter Property="HorizontalAlignment" Value="Left" />
         <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Foreground" Value="White" />
     </Style>
 
     <Style x:Key="DefaultTextBlock" TargetType="TextBlock">
